# mimispec

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README.zh.md  SECURITY.md  VISION.md  llmprompt.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
.mimocode/plans/: 1784378402891-proud-harbor.md
docs/: 0.3-real-project-transcription-report.md  0.3-usability-report.md  0.3-usability-trial-protocol.md  0.3.x-design-zh.md  advanced-usage.md  api-stability-0.3.md  commitment-state-machine.md  derivation-evidence-profile-protocol.md  language-service-protocol-0.3.md  migration-0.2-to-0.3.md  mimispec-advanced-usage.md  mimispec-reference.md  mimispec_v0.3.1_v1.0.0-rc.1.md  provenance-sidecar-0.1.md  roadmap-0.3.x.md  specification.md  stdlib-api.md  version-management.md
docs/corpora/: external-boundaries.mms  failure-and-recovery.mms  mimi-kv-real-project.mms  mimi-kv-real-project.provenance.json  mimi-log-real-project.mms  mimi-log-real-project.provenance.json  mimi-markdown-real-project.mms  mimi-markdown-real-project.provenance.json  mimichat-real-project.mms  mimichat-real-project.provenance.json  multilingual.mms  ordered-communication.mms  plain-product-intent.mms  real-world-family-ledger.mms  resource-ownership.mms  state-transitions.mms
docs/schemas/: collaboration-report.schema.json  conformance-v0.3.schema.json  language-service-v0.3.schema.json  parse-output-v0.3.schema.json  provenance-v0.1.schema.json  usability-trial-v0.3.schema.json
editors/monaco/: README.md  mimispecCompletion.ts  mimispecLanguage.ts
editors/vscode/: .vscodeignore  CHANGELOG.md  LICENSE  README.md  language-configuration.json  mimi-language-configuration.json  package-lock.json  package.json
examples/: perf_baseline.rs
mimispec/: error.rs  lexer.rs  mod.rs  parser.rs
mimispec-parser-mms/: expr.mms  flow.mms  fragment.mms  index.mms  lexer.mms  parser-core.mms  step.mms  types.mms  ui.mms
src/: main.rs
src/lib/: ast.rs  cache.rs  collaboration.rs  conformance.rs  diagnostics.rs  error.rs  format.rs  ide.rs  latex.rs  lexer.rs  lossless.rs  lsp.rs  materialize.rs  mod.rs  parser.rs  profile.rs  protocol.rs  provenance.rs  query.rs  render.rs  (+6 more)
tests/: lsp_stdio.rs
(+23 files in other folders)
