[package]
name = "mimispec"
version = "0.1.0"
edition = "2021"
authors = ["ontonous"]
license = "Apache-2.0"
homepage = "https://github.com/ontos-hpc/mimispec"
repository = "https://github.com/ontos-hpc/mimispec"
documentation = "https://github.com/ontos-hpc/mimispec#readme"

[lib]
name = "mimispec"
path = "src/lib/mod.rs"

[[bin]]
name = "mimispec"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"