[package]
name = "mimispec"
version = "0.1.0"
edition = "2021"
authors = ["ontonous <ontonous@gmail.com>"]
license = "Apache-2.0"
description = "A high-density intent description language for human-AI collaboration"
keywords = ["intent", "specification", "language", "parser", "ai"]
categories = ["parser-implementations", "development-tools", "language-design"]
homepage = "https://github.com/ontonous/mimispec"
repository = "https://github.com/ontonous/mimispec"
documentation = "https://github.com/ontonous/mimispec#readme"
readme = "README.md"
exclude = ["AGENTS.md", "mimispec-parser-mms/"]

[lib]
name = "mimispec"
path = "src/lib/mod.rs"

[[bin]]
name = "mimispec"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"